--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,7 +47,7 @@ body.sticky-bottom-footer {
 // TODO: redefine publications layout.
 
 /*****************************************************************************
-* Projects
+* Tools
 *****************************************************************************/
 
-// TODO: redefine projects layout.
+// TODO: redefine tools layout.
