--- a/_includes/tools.liquid
+++ b/_includes/tools.liquid
@@ -12,7 +12,7 @@
         %}
       {% endif %}
       <div class="card-body">
-        <h2 class="card-title text-lowercase">{{ tool.title }}</h2>
+        <h2 class="card-title">{{ tool.title }}</h2>
         <p class="card-text">{{ tool.description }}</p>
         <div class="row ml-1 mr-1 p-0">
           {% if tool.github %}
